--- a/SourceCode/13_Mar_2016/EBROnline/Content/app/loading.css
+++ b/SourceCode/13_Mar_2016/EBROnline/Content/app/loading.css
@@ -2,7 +2,7 @@
     width: 150px;
     height: 150px;
     background-color: transparent;
-    background-image: url('images/ajax-loader.gif');
+    background-image: url('ajax-loader.gif');
     /*background-image: url('/images/ajax-loader.gif');*/
     text-align: center;
     position: absolute;
